:sparkles: [#106] add missing fields
