# src/opendms/api/openapi.yaml
@@ -788,6 +788,21 @@ components:
           nullable: true
           description: De slug van de groep waartoe de bronservice behoort die deze
             zaak heeft geïndexeerd.
+        ztcServiceSlug:
+          type: string
+          nullable: true
+          description: De slug van de ZTC service die gekoppeld is aan de bronservice
+            die deze zaak heeft geïndexeerd.
+        ztcUuid:
+          type: string
+          nullable: true
+          description: De UUID van de zaak in de ZTC, indien deze bekend is en gekoppeld
+            kan worden.
+        startjaar:
+          type: string
+          nullable: true
+          description: Het jaar waarin de zaak is gestart. Dit veld is optioneel en
+            kan worden gebruikt voor aanvullende filtering of sortering op jaarniveau.
       required:
       - bronorganisatie
       - identificatie
